--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -25,7 +25,7 @@ jobs:
     name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
+      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.os }}
       cancel-in-progress: true
     defaults:
       run:
