--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -99,7 +99,7 @@ jobs:
       # Login to the GitHub Container Registry to reduce trivy rate limiting errors
       - name: Log in to registry
         # macOS does not support Docker
-        if: matrix.os != 'macos-latest-xlarge'
+        if: matrix.os != 'macos-latest-xlarge' && matrix.os != 'macos-15-xlarge'
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Run plugins tests
