--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -59,6 +59,8 @@ name = "default"
 repository = "https://github.com/qltysh/qlty"
 tag = "v0.450.0"
 
+[runtimes.enabled]
+rust = "1.82.0" # This should be kept in sync with clippy version below
 
 [[plugin]]
 name = "actionlint"
@@ -69,6 +71,7 @@ version = "1.7.9"
 
 [[plugin]]
 name = "clippy"
+version = "1.82.0" # This should be kept in sync with rust runtime version above
 
 [[plugin]]
 name = "eslint"
