--- a/qlty-cli/tests/cmd/check/network/basic.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/check/network/basic.in/.qlty/qlty.toml
@@ -4,5 +4,9 @@ config_version = "0"
 repository = "https://github.com/qltysh/qlty"
 tag = "v0.452.0"
 
+[runtimes.enabled]
+python = "3.10.13"
+
 [[plugin]]
 name = "black"
+version = "24.1.1"
