--- a/qlty-cli/tests/cmd/network/fmt/basic.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/network/fmt/basic.in/.qlty/qlty.toml
@@ -2,7 +2,7 @@ config_version = "0"
 
 [sources.default]
 repository = "https://github.com/qltysh/qlty"
-tag = "v0.452.0"
+branch = "main"
 
 [runtimes.enabled]
 python = "3.10.13"
