--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ qlty-types = { version = "0.460.0", path = "qlty-types" }
 rand = "0.8.5"
 rayon = "1.10.0"
 regex = "1.11.0"
+rust-embed = "8.5.0"
 semver = "1.0.23"
 sentry = { version = "0.34.0", default-features = false, features = [
     "backtrace",
