--- a/plugins/linters/reek/plugin.toml
+++ b/plugins/linters/reek/plugin.toml
@@ -8,7 +8,7 @@ latest_version = "6.3.0"
 known_good_version = "6.3.0"
 version_command = "reek --version"
 config_files = [".reek.yml"]
-description = "Ruby linter"
+description = "Code smell detector for Ruby"
 
 [plugins.definitions.reek.drivers.lint]
 script = "reek --format json ${target}"
