--- a/plugins/linters/reek/plugin.toml
+++ b/plugins/linters/reek/plugin.toml
@@ -12,6 +12,13 @@ description = "Code smell detector for Ruby"
 
 [plugins.definitions.reek.drivers.lint]
 script = "reek --format json ${target}"
+
+# reek --help shows:
+# <snip>
+# Exit codes:
+#        --success-exit-code CODE     The exit code when no smells are found (default: 0)
+#        --failure-exit-code CODE     The exit code when smells are found (default: 2)
+# <snip>
 success_codes = [0, 2]
 output = "stdout"
 output_format = "reek"
