--- a/qlty-config/Cargo.toml
+++ b/qlty-config/Cargo.toml
@@ -24,6 +24,7 @@ glob.workspace = true
 globset.workspace = true
 ignore.workspace = true
 md5.workspace = true
+qlty-plugins.workspace = true
 qlty-types.workspace = true
 semver.workspace = true
 serde_with.workspace = true
