--- a/plugins/linters/kube-linter/plugin.toml
+++ b/plugins/linters/kube-linter/plugin.toml
@@ -7,9 +7,12 @@ file_types = ["yaml"]
 latest_version = "0.7.1"
 known_good_version = "0.7.1"
 description = "Linting for Kubernetes YAML files and Helm charts"
+config_files = [".kube-linter.yaml", ".kube-linter.yml"]
 
 [plugins.definitions.kube-linter.drivers.lint]
 script = "kube-linter lint ${target} --format sarif"
 success_codes = [0, 1]
 output = "stdout"
 output_format = "sarif"
+output_category = "vulnerability"
+output_level = "medium"
