--- a/plugins/linters/kube-linter/plugin.toml
+++ b/plugins/linters/kube-linter/plugin.toml
@@ -1,8 +1,11 @@
 config_version = "0"
 
+[plugins.releases.kube-linter]
+github = "stackrox/kube-linter"
+download_type = "targz"
+
 [plugins.definitions.kube-linter]
-package = "golang.stackrox.io/kube-linter/cmd/kube-linter"
-runtime = "go"
+releases = ["kube-linter"]
 file_types = ["yaml"]
 latest_version = "0.7.1"
 known_good_version = "0.7.1"
