--- a/qlty-config/default.toml
+++ b/qlty-config/default.toml
@@ -53,7 +53,7 @@ globs = ["*.html"]
 globs = ["*.java"]
 
 [file_types.javascript]
-globs = ["*.js", "*.mjs", "*.jsx", "**/Jakefile"]
+globs = ["*.js", "*.mjs", "*.cjs", "**/Jakefile"]
 interpreters = [
   "rhino",
   "gjs",
@@ -65,6 +65,9 @@ interpreters = [
   "node",
   "d8",
 ]
+
+[file_types.jsx]
+globs = ["*.jsx", "*.mjsx", "*.cjsx"]
 
 [file_types.json]
 globs = [
@@ -190,11 +193,11 @@ globs = ["*.sass", "*.scss"]
 globs = ["*.toml", "**/Cargo.lock", "**/Gopkg.lock"]
 
 [file_types.typescript]
-globs = ["*.ts"]
+globs = ["*.ts", "*.mts", "*.cts"]
 interpreters = ["ts-node", "deno"]
 
 [file_types.tsx]
-globs = ["*.tsx"]
+globs = ["*.tsx", "*.mtsx", "*.ctsx"]
 
 [file_types.yaml]
 globs = ["*.yml", "*.yaml", "**/.clang-tidy", "**/glide.lock", "**/.gemrc"]
