--- a/qlty-plugins/plugins/linters/hadolint/plugin.toml
+++ b/qlty-plugins/plugins/linters/hadolint/plugin.toml
@@ -13,7 +13,7 @@ known_good_version = "2.12.1-beta"
 version_command = "hadolint --version"
 issue_url_format = "https://github.com/hadolint/hadolint/wiki/${rule}"
 description = "Dockerfile linter"
-suggested = "config"
+suggested = "targets"
 
 [plugins.definitions.hadolint.drivers.lint]
 script = "hadolint ${target} -f json --no-fail"
@@ -22,4 +22,4 @@ output = "stdout"
 output_format = "hadolint"
 cache_results = true
 batch = true
-suggested = "config"
+suggested = "targets"
