--- a/qlty-plugins/plugins/linters/kube-linter/plugin.toml
+++ b/qlty-plugins/plugins/linters/kube-linter/plugin.toml
@@ -1,8 +1,36 @@
 config_version = "0"
 
+[[plugins.downloads.kube-linter.system]]
+cpu = "x86_64"
+os = "linux"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter-linux"
+
+[[plugins.downloads.kube-linter.system]]
+cpu = "aarch64"
+os = "linux"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter-linux_arm64"
+
+[[plugins.downloads.kube-linter.system]]
+cpu = "x86_64"
+os = "macos"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter-darwin"
+
+[[plugins.downloads.kube-linter.system]]
+cpu = "aarch64"
+os = "macos"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter-darwin_arm64"
+
+[[plugins.downloads.kube-linter.system]]
+cpu = "aarch64"
+os = "windows"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter_arm64.exe"
+
+[[plugins.downloads.kube-linter.system]]
+cpu = "x86_64"
+os = "windows"
+url = "https://github.com/stackrox/kube-linter/releases/download/v${version}/kube-linter.exe"
+
 [plugins.definitions.kube-linter]
-package = "golang.stackrox.io/kube-linter/cmd/kube-linter"
-runtime = "go"
 file_types = ["yaml"]
 latest_version = "0.7.1"
 known_good_version = "0.7.1"
