--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -42,6 +42,9 @@ exclude_patterns = [
     "**/testdata/**",
     "**/tests/lang/**",
     "**/vendor/**",
+
+    # Ignore symlink
+    "plugins/**",
 ]
 
 test_patterns = [
