--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -14,36 +14,10 @@
 config_version = "0"
 
 exclude_patterns = [
-    "*_min.*",
-    "*-min.*",
-    "*.min.*",
-    "**/.yarn/**",
-    "**/*.d.ts",
-    "**/assets/**",
-    "**/bower_components/**",
-    "**/build/**",
-    "**/cache/**",
-    "**/config/**",
-    "**/db/**",
-    "**/deps/**",
-    "**/dist/**",
-    "**/extern/**",
-    "**/external/**",
     "**/fixtures/**",
-    "**/generated/**",
-    "**/Godeps/**",
-    "**/gradlew/**",
-    "**/linters/**",
-    "**/mvnw/**",
-    "**/node_modules/**",
     "**/protos/**",
-    "**/seed/**",
-    "**/target/**",
-    "**/testdata/**",
-    "**/tests/lang/**",
-    "**/vendor/**",
-
-    # Ignore symlink
+    "**/*.in/**",
+    "**/*.test.ts/**",
     "plugins/**",
 ]
 
