suggest if config present

--- a/qlty-plugins/plugins/linters/rustfmt/plugin.toml
+++ b/qlty-plugins/plugins/linters/rustfmt/plugin.toml
@@ -9,7 +9,7 @@ known_good_version = "1.82.0"
 config_files = ["rustfmt.toml", ".rustfmt.toml"]
 affects_cache = ["Cargo.toml", "Cargo.lock"]
 description = "Rust code formatter"
-suggested = "targets"
+suggested = "config"
 
 [plugins.definitions.rustfmt.drivers.format]
 script = "rustfmt ${target}"
@@ -18,7 +18,7 @@ output = "rewrite"
 batch = true
 driver_type = "formatter"
 cache_results = true
-suggested = "targets"
+suggested = "config"
 
 [[plugins.definitions.rustfmt.environment]]
 name = "PATH"
