Renames / integration tests

--- a/qlty-config/default.toml
+++ b/qlty-config/default.toml
@@ -31,7 +31,7 @@ exclude_patterns = [
 [file_types.ALL]
 globs = ["*.*"]
 
-[file_types.c_sharp]
+[file_types.csharp]
 globs = ["*.cs"]
 
 [file_types.css]
@@ -434,6 +434,9 @@ smells.duplication.filter_patterns = ["(import_statement _)"]
 
 [language.tsx]
 globs = ["*.tsx", "*.mtsx", "*.ctsx"]
+
+[language.csharp]
+globs = ["*.cs"]
 
 [smells.boolean_logic]
 threshold = 4
