If kubelinter does not emit stdout, treat it as a linter error

--- a/qlty-plugins/plugins/linters/kube-linter/plugin.toml
+++ b/qlty-plugins/plugins/linters/kube-linter/plugin.toml
@@ -46,3 +46,4 @@ output = "stdout"
 output_format = "sarif"
 output_category = "vulnerability"
 output_level = "medium"
+missing_output_as_error = true
