--- a/qlty-cli/tests/cmd/check/timeout.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/check/timeout.in/.qlty/qlty.toml
@@ -4,7 +4,7 @@ config_version = "0"
 file_types = ["shell"]
 
 [plugins.definitions.timeout.drivers.lint]
-prepare_script = "mkdir ${linter} && echo (ping -n 20 127.0.0.1>NUL) > ${linter}/sleep.cmd"
+prepare_script = "mkdir ${linter} || echo (ping -n 20 127.0.0.1>NUL) > ${linter}/sleep.cmd"
 script = "sleep 800"
 success_codes = [0]
 output = "pass_fail"
