--- a/qlty-cli/tests/cmd/check/runs_from_root_or_parent_with.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/check/runs_from_root_or_parent_with.in/.qlty/qlty.toml
@@ -4,7 +4,7 @@ config_version = "0"
 file_types = ["shell"]
 
 [plugins.definitions.runs_from_parent_with.drivers.test]
-prepare_script = "mkdir ${linter} || echo dir %2 > ${linter}/ls.cmd"
+prepare_script = "mkdir ${linter} & echo dir %2 > ${linter}/ls.cmd"
 script = "ls -l test_file.json"                                       # this should run in dir with test_file.json
 success_codes = [0]
 output = "pass_fail"
@@ -16,7 +16,7 @@ batch = true
 file_types = ["shell"]
 
 [plugins.definitions.ends_up_running_from_root.drivers.test]
-prepare_script = "mkdir ${linter} || echo dir %2 > ${linter}/ls.cmd"
+prepare_script = "mkdir ${linter} & echo dir %2 > ${linter}/ls.cmd"
 script = "ls -l root.json"                                             # this should run in root dir
 success_codes = [0]
 output = "pass_fail"
