--- a/qlty-plugins/plugins/linters/radarlint/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint/plugin.toml
@@ -18,4 +18,4 @@ output_format = "radarlint"
 output_missing = "parse"
 batch = true
 cache_results = true
-suggested = "targets"
+suggested = "never"
