--- a/qlty-plugins/plugins/linters/radarlint-go/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-go/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Go linter"
+description = "Go linter"
 file_types = ["go"]
 config_files = ["radarlint.properties"]
 
