--- a/qlty-plugins/plugins/linters/radarlint-iac/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-iac/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar IAC linter"
+description = "IAC linter"
 file_types = ["docker", "terraform"]
 config_files = ["radarlint.properties"]
 
