--- a/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Java linter"
+description = "Java linter"
 file_types = ["javascript", "typescript"]
 config_files = ["radarlint.properties"]
 
