--- a/qlty-plugins/plugins/linters/radarlint-kotlin/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-kotlin/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Kotlin linter"
+description = "Kotlin linter"
 file_types = ["kotlin"]
 config_files = ["radarlint.properties"]
 
