--- a/qlty-plugins/plugins/linters/radarlint-php/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-php/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Php linter"
+description = "Php linter"
 file_types = ["php"]
 config_files = ["radarlint.properties"]
 
