--- a/qlty-plugins/plugins/linters/radarlint-python/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-python/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Python linter"
+description = "Python linter"
 file_types = ["python"]
 config_files = ["radarlint.properties"]
 
