--- a/qlty-plugins/plugins/linters/radarlint-ruby/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-ruby/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Ruby linter"
+description = "Ruby linter"
 file_types = ["ruby"]
 config_files = ["radarlint.properties"]
 
