--- a/qlty-plugins/plugins/linters/radarlint-scala/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-scala/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Sonar Scala linter"
+description = "Scala linter"
 file_types = ["scala"]
 config_files = ["radarlint.properties"]
 
