--- a/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
@@ -7,7 +7,7 @@ strip_components = 0
 runtime = "java"
 latest_version = "1.1.3"
 known_good_version = "1.1.3"
-description = "Java linter"
+description = "Javascript linter"
 file_types = ["javascript", "typescript"]
 config_files = ["radarlint.properties"]
 
@@ -23,4 +23,4 @@ suggested = "targets"
 
 [[plugins.definitions.radarlint-js.environment]]
 name = "PATH"
-list = ["${env.PATH}"]
+list = ["${runtime}/bin", "${runtime}/Content/Home/bin", "${env.PATH}"]
