fix macos path typo

--- a/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-js/plugin.toml
@@ -23,4 +23,4 @@ suggested = "targets"
 
 [[plugins.definitions.radarlint-js.environment]]
 name = "PATH"
-list = ["${runtime}/bin", "${runtime}/Content/Home/bin", "${env.PATH}"]
+list = ["${runtime}/bin", "${runtime}/Contents/Home/bin", "${env.PATH}"]
