--- a/qlty-cli/Cargo.toml
+++ b/qlty-cli/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "qlty-cli"
+name = "qlty"
+default-run = "qlty"
 version.workspace = true
 authors.workspace = true
 description.workspace = true
@@ -11,6 +12,21 @@ categories.workspace = true
 license-file.workspace = true
 edition.workspace = true
 include.workspace = true
+
+autotests = false
+
+[lib]
+doctest = false
+
+[[bin]]
+bench = false
+test = false
+path = "src/main.rs"
+name = "qlty"
+
+[[test]]
+name = "integration"
+path = "tests/tests.rs"
 
 [dependencies]
 anyhow.workspace = true
