--- a/qlty-cloud/Cargo.toml
+++ b/qlty-cloud/Cargo.toml
@@ -35,5 +35,5 @@ webbrowser.workspace = true
 zip.workspace = true
 
 [dev-dependencies]
-tempfile = "3.2"
-insta = { workspace = true, features = ["json", "redactions"] }
+tempfile.workspace = true
+insta.workspace = true
