--- a/qlty-formats/Cargo.toml
+++ b/qlty-formats/Cargo.toml
@@ -24,4 +24,4 @@ serde.workspace = true
 serde_json.workspace = true
 
 [dev-dependencies]
-insta = { workspace = true, features = ["json", "redactions"] }
+insta.workspace = true
