--- a/qlty-cli/tests/cmd/check/subdir_from_subdir.toml
+++ b/qlty-cli/tests/cmd/check/subdir_from_subdir.toml
@@ -1,2 +1,3 @@
 bin.name = "qlty"
-args = ["check", "--all", "--no-cache", "--verbose"]
+args = ["check", "--no-cache", "--verbose", "subdir2"]
+fs.cwd = "subdir_from_subdir.in/subdir1"
