--- a/.github/workflows/update_linter_versions.yml
+++ b/.github/workflows/update_linter_versions.yml
@@ -9,9 +9,9 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/update_linter_versions.yml'
-      - 'qlty-plugins/plugins/scripts/updateLinterVersions.ts'
-      - 'qlty-plugins/plugins/scripts/fetchLatestVersion/*.ts'
+      - ".github/workflows/update_linter_versions.yml"
+      - "qlty-plugins/plugins/scripts/updateLinterVersions.ts"
+      - "qlty-plugins/plugins/scripts/fetchLatestVersion/*.ts"
 
 permissions:
   contents: write
