--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -54,12 +54,9 @@ jobs:
       - name: Run Test
         run: cargo llvm-cov --lcov --output-path target/lcov.info -- --include-ignored
 
-      - uses: qltysh/qlty-action/coverage@main
-        env:
-          QLTY_COVERAGE_TOKEN: ${{ secrets.QLTY_COVERAGE_TOKEN }}
-        if: ${{ env.QLTY_COVERAGE_TOKEN != '' }}
+      - uses: qltysh/qlty-action/coverage@bh-summary
         with:
-          coverage-token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
+          oidc: true
           files: target/lcov.info
           tag: ${{ matrix.os }}
           skip-errors: true
