Deprecate override in favour of triage

--- a/qlty-cli/tests/cmd/check/triage.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/check/triage.in/.qlty/qlty.toml
@@ -13,6 +13,9 @@ batch = true
 name = "exists"
 version = "1.0.0"
 
-[[override]]
-plugin = "exists"
-mode = "monitor"
+[[triage]]
+match.plugin = "exists"
+match.rule = "fail"
+set.mode = "comment"
+set.level = "low"
+set.category = "structure"
