--- a/qlty-cli/tests/cmd/check/skip_full_branch.in/.qlty/qlty.toml
+++ b/qlty-cli/tests/cmd/check/skip_full_branch.in/.qlty/qlty.toml
@@ -4,7 +4,7 @@ config_version = "0"
 file_types = ["shell"]
 
 [plugins.definitions.should_run.drivers.lint]
-script = "true"
+script = "exit 0"
 success_codes = [0]
 output = "pass_fail"
 
