--- a/qlty-plugins/plugins/linters/radarlint-python/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-python/plugin.toml
@@ -5,18 +5,30 @@ runnable_archive_url = "https://radarlint-releases.s3.amazonaws.com/radarlint/v$
 download_type = "targz"
 strip_components = 0
 runtime = "java"
-latest_version = "1.1.3"
-known_good_version = "1.1.3"
+latest_version = "2.0.0"
+known_good_version = "2.0.0"
 description = "Python linter"
 file_types = ["python"]
 config_files = ["radarlint.properties"]
 suggeste_mode = "comment"
 
-[plugins.definitions.radarlint-python.drivers.lint]
-script = "java -jar ${linter}/radarlint.jar python ${target}"
+[[plugins.definitions.radarlint-python.drivers.lint.version]]
+version_matcher = "<2.0.0"
 success_codes = [0]
+script = "java -jar ${linter}/radarlint.jar python ${target}"
 output = "stdout"
 output_format = "radarlint"
+output_missing = "parse"
+batch = true
+cache_results = true
+suggested = "targets"
+
+[[plugins.definitions.radarlint-python.drivers.lint.version]]
+version_matcher = ">=2.0.0"
+script = "java -jar ${linter}/radarlint.jar python ${target}"
+success_codes = [0, 1]
+output = "stdout"
+output_format = "sarif"
 output_missing = "parse"
 batch = true
 cache_results = true
