Change output_missing to error for v2

--- a/qlty-plugins/plugins/linters/radarlint-ruby/plugin.toml
+++ b/qlty-plugins/plugins/linters/radarlint-ruby/plugin.toml
@@ -29,7 +29,7 @@ script = "java -jar ${linter}/radarlint.jar ruby ${target}"
 success_codes = [0, 1]
 output = "stdout"
 output_format = "sarif"
-output_missing = "parse"
+output_missing = "error"
 batch = true
 cache_results = true
 suggested = "targets"
