--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -47,9 +47,11 @@ name = "actionlint"
 
 [[plugin]]
 name = "clippy"
+version = "1.89.0" # Note: Clippy version is controlled by the rust version above
 
 [[plugin]]
 name = "rustfmt"
+version = "1.89.0" # Note: rustfmt version is controlled by the rust version above
 
 [[plugin]]
 name = "eslint"
