--- a/qlty-plugins/plugins/linters/biome/plugin.toml
+++ b/qlty-plugins/plugins/linters/biome/plugin.toml
@@ -4,7 +4,7 @@ config_version = "0"
 runtime = "node"
 package = "@biomejs/biome"
 file_types = ["typescript", "javascript", "jsx", "tsx", "json", "css"]
-config_files = ["biome.json"]
+config_files = ["biome.json", "biome.jsonc"]
 affects_cache = ["package.json", ".editorconfig"]
 latest_version = "1.9.4"
 known_good_version = "1.9.4"
