Use level and category enums

--- a/qlty-types/Cargo.toml
+++ b/qlty-types/Cargo.toml
@@ -19,5 +19,7 @@ clap.workspace = true
 pbjson-types.workspace = true
 pbjson.workspace = true
 prost.workspace = true
+schemars.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 tree-sitter.workspace = true
